some project reorganisation
changed parser example to check decorator application ordering

changed decorator application ordering to match the order of the annotations in the method declaration.